backend/overlays/canary/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-canary
  labels:
    app: backend-active
spec:
  replicas: 1  # Start with 10% traffic
  template:
    spec:
      containers:
        - name: backend
          image: vikasprince/MERN-Backend:v2  # CANARY IMAGE
